<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".RegistroActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/imagen"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/formulario"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.497"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_correo2"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/imagen"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_contraseña2"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/et_correo2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_repetir_contraseña"
            android:hint="@string/re_contraseña"
            android:inputType="textPassword"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/et_contraseña2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/b_registrar"
            android:text="@string/registrar"
            android:background="@drawable/button_animation"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/et_repetir_contraseña"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"/>

</android.support.constraint.ConstraintLayout>