<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".LoginActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:id="@+id/imagen"
                android:src="@drawable/logo_app"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_correo"
                android:drawableStart="@drawable/user"
                android:drawablePadding="10dp"
                android:background="@null"
                android:inputType="textEmailAddress"
                android:hint="@string/correo"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/imagen"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                app:layout_constraintHorizontal_bias="0.0"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_contraseña"
                android:drawableStart="@drawable/password"
                android:drawablePadding="10dp"
                android:background="@null"
                android:inputType="textPassword"
                android:hint="@string/contraseña"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/et_correo"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/b_login"
                android:text="@string/login"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_animation"
                app:layout_constraintTop_toBottomOf="@+id/et_contraseña"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                app:layout_constraintHorizontal_bias="0.0"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/b_registrar"
                android:text="@string/registrar"
                android:background="@drawable/button_animation2"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/b_login"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"/>

        <ImageButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/ib_facebook"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/facebook"
                app:layout_constraintStart_toEndOf="@+id/ib_google"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/b_registrar"/>

        <ImageButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/ib_google"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/google"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/b_registrar"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>

        <ImageButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/ib_twitter"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/twitter"
                app:layout_constraintEnd_toStartOf="@+id/ib_google"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/b_registrar"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>